Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,6 @@
 variables:
-  serviceConnectionToAzure: AzureDevOps
-  appName: nodejslinuxsba
+  serviceConnectionToAzure: DevWorkShop
+  appName: webworkshop22
 
 trigger:
 - master
